SDKs/twilio.com/twilio_events_v1/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateSinkRequest, CreateSinkResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateSinkRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  request: {
    description: "sit",
    sinkConfiguration: "voluptas",
    sinkType: "webhook",
  },
};

sdk.createSink(req).then((res: CreateSinkResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createSink` - Create a new Sink
* `createSinkTest` - Create a new Sink Test Event for the given Sink.
* `createSinkValidate` - Validate that a test event for a Sink was received.
* `createSubscribedEvent` - Create a new Subscribed Event type for the subscription
* `createSubscription` - Create a new Subscription.
* `deleteSink` - Delete a specific Sink.
* `deleteSubscribedEvent` - Remove an event type from a subscription.
* `deleteSubscription` - Delete a specific Subscription.
* `fetchEventType` - Fetch a specific Event Type.
* `fetchSchema` - Fetch a specific schema with its nested versions.
* `fetchSchemaVersion` - Fetch a specific schema and version.
* `fetchSink` - Fetch a specific Sink.
* `fetchSubscribedEvent` - Read an Event for a Subscription.
* `fetchSubscription` - Fetch a specific Subscription.
* `listEventType` - Retrieve a paginated list of all the available Event Types.
* `listSchemaVersion` - Retrieve a paginated list of versions of the schema.
* `listSink` - Retrieve a paginated list of Sinks belonging to the account used to make the request.
* `listSubscribedEvent` - Retrieve a list of all Subscribed Event types for a Subscription.
* `listSubscription` - Retrieve a paginated list of Subscriptions belonging to the account used to make the request.
* `updateSink` - Update a specific Sink
* `updateSubscribedEvent` - Update an Event for a Subscription.
* `updateSubscription` - Update a Subscription.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
